# Plumbline

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  export_openapi.py  pyproject.toml
backend/app/: main.py  seed.py
backend/app/core/: config.py  db.py  deps.py  models.py  store.py
backend/app/core/audit/: models.py  service.py
backend/app/core/rbac/: models.py
backend/app/core/security/: captcha.py  crypto.py  envelope.py  masking.py  password_policy.py  rbac.py
backend/app/features/: __init__.py
backend/app/features/auth/: models.py  router.py  schemas.py  service.py
backend/app/features/review/: models.py  router.py  schemas.py  service.py
backend/app/features/sys_dict/: models.py  router.py  schemas.py  service.py
backend/app/features/sys_log/: router.py  schemas.py  service.py
backend/app/features/sys_menu/: router.py  schemas.py  service.py
backend/app/features/sys_role/: router.py  schemas.py  service.py
backend/app/features/sys_user/: router.py  schemas.py  service.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_init.py  0002_sysadmin.py  0003_sys_dict.py
backend/tests/: conftest.py  test_auth.py  test_envelope.py  test_rbac.py  test_review.py  test_sys_dict.py  test_sys_log.py  test_sys_menu.py  test_sys_role.py  test_sys_user.py
old/admin/backend/: Dockerfile  alembic.ini  pyproject.toml
old/admin/backend/app/: backend_pre_start.py  initial_data.py  main.py  run_initial_data.py
old/admin/backend/app/alembic/: env.py
old/admin/backend/app/api/: deps.py  main.py  permission.py
old/admin/backend/app/core/: audit.py  captcha.py  config.py  db.py  exception_handlers.py  exceptions.py  jwt.py  masking.py  password_policy.py  redis.py  security.py  (+3 more)
old/admin/backend/scripts/: prestart.sh
old/admin/backend/tests/: conftest.py  test_api_integration.py  test_jwt.py  test_masking.py  test_password_policy.py  test_response.py  test_security.py  test_sm4.py
(+329 files in other folders)
