[project]
name = "plumbline-backend"
version = "0.1.0"
description = "SDD pipeline starter — FastAPI + SQLModel + 国密安全 seam"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2",      # PostgreSQL 18 驱动
    "alembic>=1.13",
    "redis>=5.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
crypto = ["tongsuopy>=1.0"]      # 国密 SM2/SM3/SM4（生产必装）
captcha = ["pillow>=10.0"]       # 图形验证码绘制
monitor = ["sentry-sdk>=2.0"]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.6"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv]
package = false
