[project]
name = "app"
version = "0.1.0"
description = "MatrixAdmin - Admin scaffold with GM crypto, RBAC, audit logging"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "python-multipart>=0.0.7",
    "pydantic>=2.0",
    "pydantic-settings>=2.2.1",
    "sqlmodel>=0.0.21",
    "psycopg[binary]>=3.1.13",
    "alembic>=1.12.1",
    "httpx>=0.25.1",
    "tongsuopy>=1.0.0",
    "pyjwt>=2.8.0",
    "captcha>=0.6.0",
    "redis>=5.0.0",
    "user-agents>=2.2.0",
    "tenacity>=8.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.2",
    "coverage>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG001",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
sort = "-Cover"
